--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
   overflow: hidden;
 }
 #first_p #main .text .anim-typewriter {
-  animation: typewriter 3s steps(44) 2.5s 1 normal both, blinkTextCursor 2.5s steps(44) infinite normal;
+  animation: typewriter 3s steps(44) 2.5s 1 normal both, blinkTextCursor 0.4s steps(44) infinite normal;
 }
 #first_p #main .text hr {
   border: 0;
@@ -79,6 +79,7 @@
   }
   100% {
     width: 100%;
+    opacity: 1;
   }
 }
 @keyframes blinkTextCursor {
