--- a/css/style.scss
+++ b/css/style.scss
@@ -44,7 +44,7 @@
             /* Animation */
             .anim-typewriter{
                 animation: typewriter 3s steps(44) 2.5s 1 normal both,
-                           blinkTextCursor 2.5s steps(44) infinite normal;
+                           blinkTextCursor .4s  steps(44) infinite normal;
             }
             
             hr{
@@ -76,7 +76,7 @@
 @keyframes typewriter{
     0%{width: 0; opacity: 0;}
     2%{opacity: 1;}
-    100%{width: 100%;}
+    100%{width: 100%; opacity: 1;}
   }
   @keyframes blinkTextCursor{
     from{border-right-color: #8F6BA2(255,255,255,.75);}
